--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light">
     <div class="container">
         <div class="header">
             <div class="search-box">
@@ -44,6 +44,14 @@
                             <span id="wind-speed">12Km/H</span>
                             <p>Wind Speed</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="calendar-footer">
+                <div class="toggle">
+                    <span>Dark Mode</span>
+                    <div class="dark-mode-switch">
+                        <div class="dark-mode-switch-ident"></div>
                     </div>
                 </div>
             </div>
